Optimize code using kimi k2.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,99 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyTorch / ML
+*.pth
+*.pt
+*.ckpt
+*.pkl
+*.bin
+*.safetensors
+checkpoints/
+logs/
+cache/
+.cache/
+
+# Training outputs
+training_config.yaml
+wandb/
+runs/
+tensorboard_logs/
+
+# Data (exclude large datasets, keep samples)
+sample-data/*/
+!sample-data/translation/src-*.txt
+!sample-data/translation/tgt-*.txt
+!sample-data/bert-example.txt
+*.jsonl
+*.parquet
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Jupyter
+.ipynb_checkpoints
+
+# Coverage
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Original project patterns
 experiments/.*
-.*
-*__pycache_*
-*.pyc
